# rustc-duplicate-macro-bug

./: Cargo.toml
src/: lib.rs
