[package]
name = "tower-test-macro-repro"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-test = "0.1"
tower-test03 = { version = "0.3", package = "tower-test"}
